# TankBotFight

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  DOJO_1  LICENSE.md  Readme.md  vcpkg.json
.github/workflows/: clang_tidy.yaml  macos_clang.yaml  ubuntu_gcc.yaml  windows_msvc.yaml
Notes/: Text_fonts.md  sf::event.md
Notes/Graphics module/: Shapes.md  drawing 2D stuff.md  sprites_textures.md
Notes/Window module/: OpenGL in SFML.md  SFML notes.md  inputs.md  sf::event.md
Sound/: notes.md
Wizualizacja gry/: TankBotFight-Info.plist  main.cpp
Wizualizacja gry/Obstacle/: ObstacleClass.cpp  ObstacleClass.hpp
Wizualizacja gry/Tank/: TankClass.cpp  TankClass.hpp
cmake/: clang-tidy.cmake
integration_tests/: test.py
protos/: CMakeLists.txt  tank_bot_fight.proto
res/Sounds/: explosion.flac  tank_shot.flac
res/Vector/: topdownTanks_vector.swf
src/: Animation.cpp  Animation.hpp  Background.cpp  Background.hpp  Board.cpp  Board.hpp  Button.cpp  Button.hpp  Direction.cpp  Direction.hpp  Engine.hpp  Files.hpp  Game.cpp  Game.hpp  GameManager.cpp  GameManager.hpp  GameObject.hpp  Ground.cpp  Ground.hpp  KeyboardController.cpp  KeyboardController.hpp  MainMenu.cpp  MainMenu.h  MainMenu.hpp  MenuItem.cpp  MenuItem.hpp  MenuLevel.cpp  MenuLevel.hpp  Missle.cpp  Missle.hpp  MovementState.hpp  Obstacle.cpp  Obstacle.hpp  ObstacleClass.cpp  ObstacleClass.hpp  Random.cpp  Random.hpp  Size.hpp  Sound.cpp  Sound.hpp  (+16 more)
src/Controllers/: DummyController.cpp  DummyController.hpp  IController.hpp  KeyboardController.cpp  KeyboardController.hpp
src/Players/: DummyPlayer.cpp  DummyPlayer.hpp  KeyboardPlayer.cpp  KeyboardPlayer.hpp
src/Tank/: Tank.cpp  Tank.hpp  TankFactory.cpp  TankFactory.hpp  TankHealthBar.cpp  TankHealthBar.hpp  TankPart.cpp  TankPart.hpp  TankTower.cpp  TankTower.hpp  TankTurret.cpp  TankTurret.hpp
src/background/: Background.cpp  Background.hpp  BackgroundTextureName.cpp  BackgroundTextureName.hpp  FillVec.hpp  Ground.cpp  Ground.hpp  RoadGenerator.cpp  RoadGenerator.hpp  SurfaceGenerator.cpp  SurfaceGenerator.hpp
test/: BackgroundTextureNameTests.cpp  CMakeLists.txt  FillVecTests.cpp  RandomTests.cpp  SquareRootEngineTests.cpp  TankPartTests.cpp  TankTest.cpp  TankTests.cpp  TankTowerTests.cpp  TankTurretTests.cpp  TestUtility.cpp  TestUtility.hpp  TextureStoreTest.cpp  TextureStoreTests.cpp  TracesHandlerTests.cpp  UtilityTests.cpp
